# metanalyst-agent

./: .env.example  ARCHITECTURE.md  CLAUDE.md  CLI_README.md  CONTEXT.md  DATABASE_SETUP.md  FINAL_TEST_REPORT.md  METANALYST_TEST_REPORT.md  OPTIMIZATION_SUMMARY.md  README.md  STATUS_REPORT.md  TECHNICAL_DOCS.md  TECHNICAL_OVERVIEW.md  diagnose_connection_detailed.py  example.py  example_usage.py  example_with_api_keys.py  fix_uuid_database_problem.py  fix_uuid_problem_simple.py  pyproject.toml  requirements-cli.txt  requirements.txt  run_cli.py  run_example.py  setup.py  start_cli.sh  test_basic_import.py  test_setup.py  test_system.py
data/vector_store/: chunk_metadata.json  faiss_index.index
docker/: setup_postgres.sh
docs/: UUID_FIX_DOCUMENTATION.md  arquitetura.md  langgraph.md  optimization_report.md  proposta.md  test_results_summary.md
metanalyst_agent/: __init__.py  cli.py  main.py
metanalyst_agent/agents/: __init__.py  analyst_agent.py  base_agent.py  editor_agent.py  orchestrator_agent.py  processor_agent.py  research_agent.py  researcher_agent.py  retriever_agent.py  reviewer_agent.py  supervisor_agent.py  vectorizer_agent.py  writer_agent.py
metanalyst_agent/config/: __init__.py  database.py  settings.py
metanalyst_agent/database/: __init__.py  connection.py  models.py
metanalyst_agent/graph/: __init__.py  meta_analysis_graph.py  multi_agent_graph.py
metanalyst_agent/models/: __init__.py  config.py  state.py
metanalyst_agent/state/: __init__.py  iteration_state.py  meta_analysis_state.py  reducers.py
metanalyst_agent/tools/: __init__.py  analysis_tools.py  handoff_tools.py  processing_tools.py  processor_tools.py  research_tools.py  research_tools.py.backup_uuid_fix_20250720_223554  retrieval_tools.py  review_tools.py  vectorization_tools.py  writing_tools.py
metanalyst_agent/utils/: __init__.py  database_setup.py  logging_config.py  logging_setup.py
outputs/: meta_analysis_report_77ef12bd-8161-453f-b51f-213234ad6c6c.html  meta_analysis_report_96cce64a-e071-4d36-9593-81dabd6f45e7.html  meta_analysis_report_ef68e95c-dbbb-43e8-8890-be7600211cfb.html
scripts/: cleanup_invalid_uuids.py  docker-compose.yml  fix_invalid_uuids.sql  fix_uuids.sh  postgres.conf  setup_database.sql  setup_postgres.sh  setup_postgresql.sh
src/: __init__.py  cli.py  main.py
src/agents/: __init__.py  orchestrator.py  processor.py  researcher.py
src/models/: __init__.py  schemas.py  state.py
src/tools/: __init__.py  orchestrator_tools.py  processing_tools.py  processor_tools.py  tavily_tools.py
src/utils/: __init__.py  config.py
tests/: __init__.py  test_basic_functionality.py  test_core_optimizations.py  test_flow_simulation.py  test_integration_optimized.py  test_optimization.py  test_optimization_simple.py  test_orchestrator_logic.py  test_researcher.py
